--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,17 @@ run
 
 # Files from Forge MDK
 forge*changelog.txt
+
+/*
+!/src/
+!.gitignore
+!gradlew*
+!/gradle/
+!/LICENSE.txt
+!/README.md
+!build.gradle
+!.travis.yml
+!/textures/
+!/gradle.properties
+!.gitattributes
+!ASSETS_LICENSE.txt
