--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -9,9 +9,9 @@ modLoader="javafml" #mandatory
 loaderVersion="[35,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
 # The license for you mod. This is mandatory metadata and allows for easier comprehension of your redistributive properties.
 # Review your options at https://choosealicense.com/. All rights reserved is the default copyright stance, and is thus the default here.
-license="All rights reserved"
+license="GNU GPLv3"
 # A URL to refer people to when problems occur with this mod
-issueTrackerURL="https://bajtix.xyz" #optional
+issueTrackerURL="https://github.com/FlyLamb/MusicBlockMod" #optional
 # A list of mods - how many allowed here is determined by the individual mod loader
 [[mods]] #mandatory
 # The modid of the mod
@@ -23,7 +23,7 @@ version="${file.jarVersion}" #mandatory
  # A display name for the mod
 displayName="MusicBlock" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification <here>
-updateJSONURL="https://bajtix.xyz" #optional
+updateJSONURL="https://github.com/FlyLamb/MusicBlockMod" #optional
 # A URL for the "homepage" for this mod, displayed in the mod UI
 displayURL="https://bajtix.xyz" #optional
 # A file name (in the root of the mod JAR) containing a logo for display
@@ -54,6 +54,6 @@ Lol
     modId="minecraft"
     mandatory=true
 # This version range declares a minimum of the current minecraft version up to but not including the next major version
-    versionRange="[1.16.4,1.17)"
+    versionRange="[1.16.2,1.17)"
     ordering="NONE"
     side="BOTH"
